--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -11,11 +11,9 @@ env:
   AC_MODULES: "https://github.com/azerothcore/mod-ah-bot.git https://github.com/azerothcore/mod-transmog.git"
   BUILD_DIR: "${{ github.workspace }}/build"
   INSTALL_DIR: "${{ github.workspace }}/install"
-  # Boost配置（使用msvc预编译版）
-  BOOST_VERSION: "1_89_0"
-  BOOST_INSTALLER: "boost_${{ env.BOOST_VERSION }}-msvc-14.3-64.exe"
-  BOOST_URL: "https://boostorg.jfrog.io/artifactory/main/release/1.89.0/binaries/${{ env.BOOST_INSTALLER }}"
-  BOOST_INSTALL_DIR: "${{ github.workspace }}/boost"  # 安装目录
+  # 直接指定Boost安装路径和下载地址（移除版本相关变量）
+  BOOST_INSTALL_DIR: "${{ github.workspace }}/boost"
+  BOOST_URL: "https://archives.boost.io/release/1.89.0/binaries/boost_1_89_0-msvc-14.3-64.exe"
 
 jobs:
   build:
@@ -48,23 +46,35 @@ jobs:
           }
         shell: pwsh
       
+      - name: 缓存Boost
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.BOOST_INSTALL_DIR }}
+          key: boost-1.89.0-msvc-14.3-64-windows
+      
       - name: 下载并静默安装Boost
         run: |
-          # 下载Boost安装器
-          Invoke-WebRequest -Uri "${{ env.BOOST_URL }}" -OutFile "${{ env.BOOST_INSTALLER }}"
+          # 提取安装器文件名（从URL中获取）
+          $installerName = ${{ env.BOOST_URL }} -split '/' | Select-Object -Last 1
           
-          # 确保安装目录存在
-          New-Item -ItemType Directory -Path "${{ env.BOOST_INSTALL_DIR }}" -Force | Out-Null
-          
-          # 静默安装（/S 表示静默，/DIR 指定安装目录）
-          .\${{ env.BOOST_INSTALLER }} /S /DIR="${{ env.BOOST_INSTALL_DIR }}"
-          
-          # 验证安装
-          if (Test-Path "${{ env.BOOST_INSTALL_DIR }}/boost") {
-            echo "Boost安装成功"
+          # 仅在缓存未命中时下载安装
+          if (-not (Test-Path "${{ env.BOOST_INSTALL_DIR }}/boost")) {
+            # 下载安装器
+            Invoke-WebRequest -Uri "${{ env.BOOST_URL }}" -OutFile $installerName
+            
+            # 确保安装目录存在
+            New-Item -ItemType Directory -Path "${{ env.BOOST_INSTALL_DIR }}" -Force | Out-Null
+            
+            # 静默安装（/S 表示静默，/DIR 指定安装目录）
+            .\$installerName /S /DIR="${{ env.BOOST_INSTALL_DIR }}"
+            
+            # 验证安装
+            if (-not (Test-Path "${{ env.BOOST_INSTALL_DIR }}/boost")) {
+              echo "Boost安装失败"
+              exit 1
+            }
           } else {
-            echo "Boost安装失败"
-            exit 1
+            echo "使用缓存的Boost安装"
           }
           
           # 转换路径为/分隔（设置BOOST_ROOT环境变量）
@@ -95,27 +105,36 @@ jobs:
       - name: 运行CMake生成解决方案
         run: |
           cd ${{ env.BUILD_DIR }}
-          # 使用转换后的BOOST_ROOT（/分隔路径）
           cmake -G "Visual Studio 17 2022" -A x64 `
             -DCMAKE_INSTALL_PREFIX="${{ env.INSTALL_DIR }}" `
             -DBOOST_ROOT="${{ env.BOOST_ROOT }}" `
             -DWITH_WARNINGS=ON `
             -DSCRIPTS=static `
             -DTOOLS=ON `
+            -DENABLE_EXTRA_LOGS=OFF `
+            -DUSE_SCRIPTPCH=ON `
             ${{ github.workspace }}/azerothcore
         shell: pwsh
       
       - name: 使用VS2022编译
         run: |
           cd ${{ env.BUILD_DIR }}
-          msbuild AzerothCore.sln /p:Configuration=Release /p:Platform=x64 /m
+          msbuild AzerothCore.sln /p:Configuration=Release /p:Platform=x64 /m /flp:LogFile=compile.log
         shell: cmd
+        continue-on-error: false
       
       - name: 安装编译结果
         run: |
           cd ${{ env.BUILD_DIR }}
           msbuild INSTALL.vcxproj /p:Configuration=Release /p:Platform=x64 /m
         shell: cmd
+      
+      - name: 上传编译日志（失败时）
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: compile-logs
+          path: ${{ env.BUILD_DIR }}/compile.log
       
       - name: 上传编译产物
         uses: actions/upload-artifact@v4
