--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -11,13 +11,6 @@ env:
   AC_MODULES: "https://github.com/azerothcore/mod-ah-bot.git https://github.com/azerothcore/mod-transmog.git"
   BUILD_DIR: "${{ github.workspace }}/build"
   INSTALL_DIR: "${{ github.workspace }}/install"
-  # Boost源码配置
-  BOOST_URL: "https://archives.boost.io/release/1.89.0/source/boost_1_89_0.tar.gz"
-  BOOST_ARCHIVE_NAME: "boost_1_89_0.tar.gz"  # 显式指定归档文件名
-  BOOST_FOLDER_NAME: "boost_1_89_0"          # 解压后的文件夹名
-  BOOST_SOURCE_DIR: "${{ github.workspace }}/boost-src"  # 源码目录
-  BOOST_INSTALL_DIR: "${{ github.workspace }}/boost"     # 安装目录
-
 jobs:
   build:
     runs-on: windows-2022
@@ -31,6 +24,59 @@ jobs:
           mysql --version
           vswhere -latest -property installationPath
         shell: pwsh
+
+
+      - name: 方式1：从 Boost 官方源下载（稳定）
+        uses: carlosperate/download-file-action@v2  # 可靠的文件下载 Action
+        with:
+          file-url: "https://boostorg.jfrog.io/artifactory/main/release/1.89.0/binaries/boost_1_89_0-msvc-14.3-64.exe"
+          file-name: "boost_installer.exe"  # 重命名为简短名称，方便后续调用
+          location: "./"  # 下载到工作目录根路径
+
+      # # 方式2：若安装包已上传到项目仓库，可通过 checkout 读取（适合内网/自定义包）
+      # - name: 检出项目代码（含本地 Boost 安装包）
+      #   uses: actions/checkout@v4
+      # - name: 重命名本地安装包（可选）
+      #   run: ren "./path/to/boost_1_89_0-msvc-14.3-64.exe" "boost_installer.exe"
+      #   shell: cmd  # Windows 环境用 cmd 执行重命名
+
+      ########################################################################
+      # 步骤 2：静默安装 Boost（核心步骤）
+      ########################################################################
+      - name: 静默安装 Boost 到指定路径
+        run: |
+          # 关键参数说明：
+          # /S：静默安装（无界面）
+          # /INSTALLDIR：指定安装路径（建议用绝对路径，避免权限问题）
+          # /NOICONS：不创建桌面快捷方式（可选，减少冗余）
+          .\boost_installer.exe /S /INSTALLDIR="C:\Boost\1.89.0" /NOICONS
+        shell: powershell  # 使用 PowerShell 执行命令，兼容性更好
+
+      ########################################################################
+      # 步骤 3：验证安装（可选，用于确认安装成功）
+      ########################################################################
+      - name: 验证 Boost 安装目录
+        run: |
+          # 检查安装目录是否存在，以及关键文件（如 boost.config）
+          if (Test-Path "C:\Boost\1.89.0") {
+            Write-Host "Boost 安装目录存在！"
+            Get-ChildItem -Path "C:\Boost\1.89.0" -Recurse | Select-Object -First 10  # 列出前10个文件，确认结构
+          } else {
+            Write-Error "Boost 安装目录不存在，安装失败！"
+            exit 1  # 安装失败时终止工作流
+          }
+        shell: powershell
+
+      ########################################################################
+      # 步骤 4：配置环境变量（可选，用于后续编译项目时调用 Boost）
+      ########################################################################
+      - name: 设置 Boost 环境变量（供后续步骤使用）
+        run: |
+          # 设置 BOOST_ROOT（指向安装目录，编译器会自动识别）
+          echo "BOOST_ROOT=C:\Boost\1.89.0" | Out-File -FilePath $env:GITHUB_ENV -Append
+          # 设置 PATH（添加 Boost 的 bin 目录，避免运行时找不到依赖）
+          echo "PATH=$env:PATH;C:\Boost\1.89.0\lib64-msvc-14.3" | Out-File -FilePath $env:GITHUB_ENV -Append
+        shell: powershell
       
       - name: 配置环境变量（VS2022和工具链）
         run: |
@@ -48,82 +94,6 @@ jobs:
           }
         shell: pwsh
       
-      - name: 缓存Boost源码和编译结果
-        uses: actions/cache@v3
-        with:
-          path: |
-            ${{ env.BOOST_SOURCE_DIR }}
-            ${{ env.BOOST_INSTALL_DIR }}
-          key: boost-1.89.0-src-windows-x64
-      
-      - name: 下载并解压Boost源码
-        run: |
-          if (-not (Test-Path "${{ env.BOOST_SOURCE_DIR }}")) {
-            # 下载源码包（指定明确的文件名）
-            Invoke-WebRequest -Uri "${{ env.BOOST_URL }}" -OutFile "${{ env.BOOST_ARCHIVE_NAME }}"
-            
-            # 创建源码目录
-            New-Item -ItemType Directory -Path "${{ env.BOOST_SOURCE_DIR }}" -Force | Out-Null
-            
-            # 第一步：解压gz压缩包（得到tar文件）
-            7z x "${{ env.BOOST_ARCHIVE_NAME }}" -o"${{ env.BOOST_SOURCE_DIR }}"
-            
-            # 第二步：解压tar文件（得到源码文件夹）
-            $tarFile = Join-Path -Path "${{ env.BOOST_SOURCE_DIR }}" -ChildPath "${{ env.BOOST_FOLDER_NAME }}.tar"
-            7z x "$tarFile" -o"${{ env.BOOST_SOURCE_DIR }}"
-            
-            # 验证tar文件是否存在
-            if (-not (Test-Path "$tarFile")) {
-              echo "错误：解压后未找到tar文件 $tarFile"
-              exit 1
-            }
-            
-            # 验证源码文件夹是否存在
-            $sourceFolder = Join-Path -Path "${{ env.BOOST_SOURCE_DIR }}" -ChildPath "${{ env.BOOST_FOLDER_NAME }}"
-            if (-not (Test-Path "$sourceFolder")) {
-              echo "错误：解压后未找到源码文件夹 $sourceFolder"
-              exit 1
-            }
-            
-            # 移动源码到目标目录（合并文件夹内容）
-            Get-ChildItem -Path "$sourceFolder" -Recurse | Move-Item -Destination "${{ env.BOOST_SOURCE_DIR }}"
-            Remove-Item -Path "$sourceFolder" -Recurse -Force  # 清理空文件夹
-          } else {
-            echo "使用缓存的Boost源码"
-          }
-        shell: pwsh
-      
-      - name: 编译并安装Boost
-        run: |
-          cd "${{ env.BOOST_SOURCE_DIR }}"
-          
-          if (-not (Test-Path "${{ env.BOOST_INSTALL_DIR }}\include\boost")) {
-            .\bootstrap.bat msvc
-            
-            .\b2.exe `
-              --build-dir="${{ env.BOOST_SOURCE_DIR }}\build" `
-              --prefix="${{ env.BOOST_INSTALL_DIR }}" `
-              toolset=msvc-14.3 `
-              architecture=x86 `
-              address-model=64 `
-              variant=release `
-              link=static `
-              threading=multi `
-              runtime-link=shared `
-              --with-system `
-              --with-filesystem `
-              --with-thread `
-              --with-date_time `
-              --with-program_options `
-              --with-iostreams `
-              install
-          } else {
-            echo "使用缓存的Boost编译结果"
-          }
-          
-          $boostRoot = "${{ env.BOOST_INSTALL_DIR }}".Replace('\', '/')
-          echo "BOOST_ROOT=$boostRoot" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        shell: pwsh
       
       - name: 克隆AzerothCore源码
         run: |
