Update Build AzerothCore Linux.yml

--- a/.github/workflows/Build AzerothCore Linux.yml
+++ b/.github/workflows/Build AzerothCore Linux.yml
@@ -93,7 +93,7 @@ jobs:
       - name: 打包指定路径文件
         id: package
         run: |
-          TARGET_PATH="/home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/install/"
+          cd /azerothcore
           # 打包该路径下的所有文件（保留目录结构）
           tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" -C "$TARGET_PATH" *
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
