--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,5 +81,29 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.package.outputs.name }}
+
+      - name: 创建GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: "build-${{ steps.ts.outputs.date }}-${{ steps.ts.outputs.utc }}"
+          release_name: "AzerothCore 自动构建 ${{ steps.ts.outputs.sh }}"
+          body: |
+            ### 构建信息
+            - 构建时间：UTC ${{ steps.ts.outputs.utc }}（北京时间 ${{ steps.ts.outputs.sh }}）
+            - 核心版本：${{ env.ACORE_BRANCH }}
+            - 编译类型：${{ env.BUILD_TYPE }}
+
+      - name: 上传到Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./${{ steps.package.outputs.name }}
+          asset_name: ${{ steps.package.outputs.name }}
+          asset_content_type: application/gzip
           path: ${{ steps.package.outputs.name }}
-          retention-days: 3  # 保留3天
+          retention-days: 3
